--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "simulator/lib/sdlpp"]
 	path = simulator/lib/sdlpp
 	url = https://github.com/mls-m5/sdlpp
+[submodule "simulator/lib/glm"]
+	path = simulator/lib/glm
+	url = https://github.com/g-truc/glm
