Remove redundant files

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,10 +10,28 @@
 
 [env]
 
-[env:teensylc]
-platform = teensy
-board = teensylc
+
+[env:modwifi]
+platform = espressif8266
+board = modwifi
 framework = arduino
+
+; build_src_filter = +<*> -<.git/> -<.svn/>
+build_flags = -DIS_CONTROLLER
+
+[env:wroom-32]
+platform = espressif32
+board = esp32dev
+framework = arduino
+
+build_flags = -DIS_CAR
+
+;build_src_filter = +<*> -<.git/> -<.svn/>
+
+; [env:teensylc]
+; platform = teensy
+; board = teensylc
+; framework = arduino
 
 ;[env:teensy36]
 ;platform = https://github.com/platformio/platform-teensy.git
@@ -21,4 +39,3 @@ framework = arduino
 ;board = teensy36
 ;build_flags = -D TEENSY_OPT_SMALLEST_CODE
 ;upload_protocol = teensy-cli
-
