--- a/platformio.ini
+++ b/platformio.ini
@@ -11,31 +11,15 @@
 [env]
 
 
-[env:modwifi]
-platform = espressif8266
-board = modwifi
-framework = arduino
-
-; build_src_filter = +<*> -<.git/> -<.svn/>
-build_flags = -DIS_CONTROLLER
-
-[env:wroom-32]
+[env:wroom-32-controller]
 platform = espressif32
 board = esp32dev
 framework = arduino
-
 build_flags = -DIS_CAR
 
-;build_src_filter = +<*> -<.git/> -<.svn/>
+[env:wroom-32-car]
+platform = espressif32
+board = esp32dev
+framework = arduino
+build_flags = -DIS_CAR
 
-; [env:teensylc]
-; platform = teensy
-; board = teensylc
-; framework = arduino
-
-;[env:teensy36]
-;platform = https://github.com/platformio/platform-teensy.git
-;framework = arduino
-;board = teensy36
-;build_flags = -D TEENSY_OPT_SMALLEST_CODE
-;upload_protocol = teensy-cli
