Implement access point broadcasting

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,11 +11,12 @@
 [platformio]
 extra_configs = wifi.ini
 
+; Flags used by both controller and car
+
 [env]
 build_unflags = -std=gnu++14
 build_flags = -std=c++14 {env.flags}
 lib_deps = Adafruit PWM Servo Driver Library Wire
-
 
 [env:wroom-32-controller]
 platform = espressif32
@@ -25,22 +26,11 @@ build_flags = -DIS_CAR ${env.build_flags}
 build_unflags = ${env.build_unflags}
 lib_deps = ${env.lib_deps}
 
-[env:wroom-32-car]
-platform = espressif32
-board = esp32dev
-framework = arduino
-build_flags = -DIS_CAR ${env.build_flags}
-build_unflags = ${env.build_unflags}
-lib_deps = ${env.lib_deps}
+; [env:wroom-32-car]
+; platform = espressif32
+; board = esp32dev
+; framework = arduino
+; build_flags = -DIS_CAR ${env.build_flags}
+; build_unflags = ${env.build_unflags}
+; lib_deps = ${env.lib_deps}
 
-
-[common]
-lib_deps =
-    Adafruit PWM Servo Driver Library
-    Wire
-
-[env:featheresp32]
-platform = espressif32
-board = esp32dev
-framework = arduino
-lib_deps = ${common.lib_deps}
