--- a/wifi_template.ini
+++ b/wifi_template.ini
@@ -1,5 +1,5 @@
 
-; Copy this file and change the password
+; Copy this file to `wifi.ini` and change the password
 [env]
 build_flags =
     -DWIFI_PASSWORD=\"change_this_to_password\"
