--- a/platformio.ini
+++ b/platformio.ini
@@ -15,14 +15,14 @@ extra_configs = wifi.ini
 
 [env]
 build_unflags = -std=gnu++14
-build_flags = -std=c++14 {env.flags}
+build_flags = -std=c++14 
 lib_deps = Adafruit PWM Servo Driver Library Wire
 
 [env:wroom-32-controller]
 platform = espressif32
 board = esp32dev
 framework = arduino
-build_flags = -DIS_CAR ${env.build_flags}
+build_flags = -DIS_CONTROLLER ${env.build_flags}
 build_unflags = ${env.build_unflags}
 lib_deps = ${env.lib_deps}
 
