Should work in theory on lolin

--- a/platformio.ini
+++ b/platformio.ini
@@ -26,11 +26,11 @@ build_flags = -DIS_CONTROLLER ${env.build_flags}
 build_unflags = ${env.build_unflags}
 lib_deps = ${env.lib_deps}
 
-; [env:wroom-32-car]
-; platform = espressif32
-; board = esp32dev
-; framework = arduino
-; build_flags = -DIS_CAR ${env.build_flags}
-; build_unflags = ${env.build_unflags}
-; lib_deps = ${env.lib_deps}
+[env:lolin-modwifi-car]
+platform = espressif8266
+board = modwifi
+framework = arduino
+build_flags = -DIS_CAR ${env.build_flags}
+build_unflags = ${env.build_unflags}
+lib_deps = ${env.lib_deps}
 
