Use esp32 instead

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-extra_configs = wifi.ini
+;extra_configs = wifi.ini
 
 ; Flags used by both controller and car
 
@@ -27,10 +27,12 @@ build_unflags = ${env.build_unflags}
 lib_deps = ${env.lib_deps}
 
 [env:lolin-modwifi-car]
-platform = espressif8266
-board = modwifi
+;platform = espressif8266
+;board = modwifi
+platform = espressif32
+board =  esp32-devkitlipo
 framework = arduino
 build_flags = -DIS_CAR ${env.build_flags}
 build_unflags = ${env.build_unflags}
 lib_deps = ${env.lib_deps}
-
+;upload_port=/dev/ttyUSB0
