Add some stearing servo support

--- a/platformio.ini
+++ b/platformio.ini
@@ -26,13 +26,11 @@ build_flags = -DIS_CONTROLLER ${env.build_flags}
 build_unflags = ${env.build_unflags}
 lib_deps = ${env.lib_deps}
 
-[env:lolin-modwifi-car]
-;platform = espressif8266
-;board = modwifi
+[env:esp32-car]
 platform = espressif32
 board =  esp32-devkitlipo
 framework = arduino
 build_flags = -DIS_CAR ${env.build_flags}
 build_unflags = ${env.build_unflags}
-lib_deps = ${env.lib_deps}
-;upload_port=/dev/ttyUSB0
+lib_deps =
+    ${env.lib_deps}
